--- a/contenido/blog.html
+++ b/contenido/blog.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="../css/guia_estils.css">
     <link rel="stylesheet" href="../css/index.css">
     <script src="https://kit.fontawesome.com/bdb09794cc.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@latest/dist/Chart.min.js"></script>
     <title>Cultural Life</title>
 </head>
 
@@ -110,68 +109,95 @@
                     <li class="list-inline-item col-4 col-md-2 col-xl-1">
                         <a href="../contenido/blog.html"><i
                                     class="fa-brands fa-blogger fa-2xs"></i>&nbspBlog</a>
-                    </li>s
+                    </li>
                 </ul>
             </div>
         </nav>
-        <main class="col-12 mt-1">
+        <main class="mt-1 container-fluid">
             <div class="row">
-                <div class="col-12 text-center">
-                    <h2>5-3.INCORPORACIÓN DE GRÁFICAS DE DATOS</h2>
-                    <div class="row">
-                        <div class="offset-1 col-10 col-xs-5 col-md-5
-                                offset-xl-1 col-xl-4">
-                            <canvas id="migrafico1" width="500" height="500"></canvas>
-                        </div>
-                        <div class="offset-1 col-10 offset-xs-0 col-xs-5
-                                col-md-5 col-xl-4">
-                            <canvas id="migrafico2" width="500" height="500"></canvas>
-                        </div>
-                    </div>
-                </div>
-                <script src="../js/grafica.js"></script>
-        </main>
-        </div>
-        <!-- FOOTER -->
-        <footer class="container-fluid colorSecundario">
-            <div class="row mt-5 align-items-xl-center">
-                <div class="col-12 col-md-4 col-lg-3 col-xl-2">
-                    <h3>Mantente informado...</h3>
-                    <ul class="list-inline">
-                        <li class="list-inline-item">
-                            <a href="http://www.instagram.com" target="_blank"><img class="icono
-                                        colorSecundario" src="../imagenes/instagram.svg" alt="icono
-                                        de instagram" /></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="https://es-es.facebook.com/" target="_blank"><img class="icono
-                                        colorSecundario" src="../imagenes/facebook.svg" alt="icono
-                                        de facebook" /></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario" src="../imagenes/twitter.svg" alt="icono
-                                        de twitter" /></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6" ">
-                        <div class="container row align-items-center ">
-                            <div class="col ">
-                                <img class="icono-mediano "src="../imagenes/mascaras.png "alt="Icono de cultural life "/>
-                            </div>
-                            <div class="col-9 ">
-                                <h2>CULTURAL LIFE</h2>
-                                <h3>Nuestra vida es la cultura.</h3>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 text-end col-xl-4 ">
+                <h2 class="text-center">LICÉNCIAS Y DERECHOS DE AUTOR </h2>
+                <div class="col-12 col-md-4 mt-4">
+                    <h3>EL PRINCIPAL NOMINADO PARA EL OSCAR</h3>
+                    <figure>
+                        <img class="img-fluid" src="../imagenes/nominado.jpg" alt="El actor nominado para el oscar Jorge Fernandez" />
+                        <figcaption>
+                            Jorge Fernandez posa con la estatuilla.
+                        </figcaption>
+                    </figure>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, nihil. Similique hic id veniam. Inventore, debitis, odit labore autem est temporibus, ullam cumque voluptatibus repellendus nobis suscipit. In quo obcaecati minus natus
+                        esse ad nisi dolorem, eum, unde nesciunt fugit?</p>
 
-                        <p>Te informamos de los términos legales y nuestras
-                            <a href="# ">Condiciones de uso</a>
-                        </p>
+                </div>
+                <div class="col-6 offset-md-1 col-md-6 mt-4">
+                    <h2 class="text-center">EJERCICIOS DE LAS LICENCIAS.</h2>
+                    <p class="fw-bold">Que tios de licencias existen para poder servir información o imágenes en la web? Que són las licéncias Creative Commons y de que tipo hay?</p>
+                    <p>Generalmente, podemos condiferar que hay 2 tipos de licencia. Copyright y Copyleft. El copyright unicamente permite a su autor utilizar,modificar y distribuir su contenido o a un tercero, si este tuviese autorización del autor o/y
+                        el pago por su uso.El copyleft si permite el uso, copia y redistribución de la obra, siempre que se reconozca la autoría. No exige la autorización del autor.El más popular de los tipos de licencia Copyleft, es Creative Commons.
+                        Creative Commons se basa en la distribución gratuita de los productos digitales aunque incorporando ciertas limitaciones de uso. Són Attribution(reconocer la autoria), Share Alike(permite la creación de obras derivadas manteniendo
+                        la misma licencia), No derivate Works(No permite la transformación para crear una obra derivada), Non Commercial(es para usos no comerciales).</p>
+
+                    <p class="fw-bold"> En nuestra web de espectáculos, en la nueva sección BLOG,hemos realizado 8un artículo sobre los nóminados al óscar al mejor actor.De forma similar a la actividad Derechos de autor, busca una imagen con licéncia libre para el nuevo
+                        curso y que pueda ser la imagen destacada del nuevo artículo. Explica de donde la has descargado y las características que te facilita la web acerca de la imagen en cuestión en cuanto a licéncia,medida, tipo de imagen. Muestra
+                        la imagen escogida.
+                    </p>
+                    <p>He descargado la foto de <a href="http://www.pexels.com/" target="_blank">pexels</a>.<br/>LICENCIA<br/> ✓ Se puede utilizar gratis.<br/>✓ No es necesario mencionar la fuente<br/>
+                    </p>
+                    <p>Y si probamos a obtener más información acerca de la licencia, en la entrada de la página encontramos este mensaje:
+                        <h4>¿Qué está permitido? Queremos que la licencia de Pexels sea lo más sencilla posible. Sigue leyendo si quieres más información.</h4>
+                    </p>
+                    <ul>
+                        <li>  Todas las fotos y vídeos en Pexels se pueden utilizar gratuitamente.</li>
+                        <li>  No hace falta mencionar la fuente. </li>
+                        <li> No es obligatorio elogiar públicamente al fotógrafo o a Pexels, aunque es un lindo detalle.</li>
+                        <li>  Puedes modificar las fotos y vídeos de Pexels. Utiliza tu creatividad y edítalos como quieras.</li>
+                    </ul>
+                    <p> A nivel de información nos ofrece diferentes datos útiles como la máquina que se utlizó para obtenerla, con que programa ha sido editada, el dia que fué tomada y los datos técnicos como la iso, la apertura,tiempo de exposición y otros.
+                        Cuando tratamos de descargar, nos dá una série de tamaños e incluso , podemos indicar las medidas que necesitamos.</p>
+
+                </div>
+            </div>
+    </div>
+    </main>
+    </div>
+    <!-- FOOTER -->
+    <footer class="container-fluid colorSecundario">
+        <div class="row mt-5 align-items-xl-center">
+            <div class="col-12 col-md-4 col-lg-3 col-xl-2">
+                <h3>Mantente informado...</h3>
+                <ul class="list-inline">
+                    <li class="list-inline-item">
+                        <a href="http://www.instagram.com" target="_blank"><img class="icono colorSecundario" src="../imagenes/instagram.svg" alt="icono
+                                    de instagram" /></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://es-es.facebook.com/" target="_blank"><img class="icono
+                                    colorSecundario" src="../imagenes/facebook.svg" alt="icono
+                                    de facebook" /></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://twitter.com/" target="_blank"><img class="icono colorSecundario" src="../imagenes/twitter.svg" alt="icono
+                                    de twitter" /></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="d-none d-md-flex col-md-8 col-lg-6 col-xl-6" ">
+                    <div class="container row align-items-center ">
+                        <div class="col ">
+                            <img class="icono-mediano "src="../imagenes/mascaras.png "alt="Icono de cultural life "/>
+                        </div>
+                        <div class="col-9 ">
+                            <h2>CULTURAL LIFE</h2>
+                            <h3>Nuestra vida es la cultura.</h3>
+                        </div>
                     </div>
                 </div>
-            </footer>
-        </body>
-    </html>
+                <div class="col-12 text-end col-xl-4 ">
+
+                    <p>Te informamos de los términos legales y nuestras
+                        <a href="# ">Condiciones de uso</a>
+                    </p>
+                </div>
+            </div>
+        </footer>
+    </body>
+</html>
