--- a/contenido/resultados.html
+++ b/contenido/resultados.html
@@ -104,6 +104,10 @@
                         <a href="../contenido/grafica.html"><i
                                     class="fa-solid fa-arrow-trend-up fa-2xs"></i>&nbspGráfica</a>
                     </li>
+                    <li class="list-inline-item col-4 col-md-2 col-xl-1">
+                        <a href="../contenido/blog.html"><i
+                                    class="fa-brands fa-blogger fa-2xs"></i>&nbspBlog</a>
+                    </li>
                 </ul>
             </div>
         </nav>
