--- a/contenido/blog.html
+++ b/contenido/blog.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -130,7 +131,7 @@
                 </div>
                 <div class="col-6 offset-md-1 col-md-6 mt-4">
                     <h2 class="text-center">EJERCICIOS DE LAS LICENCIAS.</h2>
-                    <p class="fw-bold">Que tios de licencias existen para poder servir información o imágenes en la web? Que són las licéncias Creative Commons y de que tipo hay?</p>
+                    <p class="fw-bold">Que tipos de licencias existen para poder servir información o imágenes en la web? Que són las licéncias Creative Commons y de que tipo hay?</p>
                     <p>Generalmente, podemos condiferar que hay 2 tipos de licencia. Copyright y Copyleft. El copyright unicamente permite a su autor utilizar,modificar y distribuir su contenido o a un tercero, si este tuviese autorización del autor o/y
                         el pago por su uso.El copyleft si permite el uso, copia y redistribución de la obra, siempre que se reconozca la autoría. No exige la autorización del autor.El más popular de los tipos de licencia Copyleft, es Creative Commons.
                         Creative Commons se basa en la distribución gratuita de los productos digitales aunque incorporando ciertas limitaciones de uso. Són Attribution(reconocer la autoria), Share Alike(permite la creación de obras derivadas manteniendo
@@ -140,7 +141,7 @@
                         curso y que pueda ser la imagen destacada del nuevo artículo. Explica de donde la has descargado y las características que te facilita la web acerca de la imagen en cuestión en cuanto a licéncia,medida, tipo de imagen. Muestra
                         la imagen escogida.
                     </p>
-                    <p>He descargado la foto de <a href="http://www.pexels.com/" target="_blank">pexels</a>.<br/>LICENCIA<br/> ✓ Se puede utilizar gratis.<br/>✓ No es necesario mencionar la fuente<br/>
+                    <p>He descargado la foto de <a href="http://www.pexels.com/" target="_blank">pexels</a>.Al descargar la foto, vemos las siguiente indicaciones.<br/>LICENCIA<br/> ✓ Se puede utilizar gratis.<br/>✓ No es necesario mencionar la fuente<br/>
                     </p>
                     <p>Y si probamos a obtener más información acerca de la licencia, en la entrada de la página encontramos este mensaje:
                         <h4>¿Qué está permitido? Queremos que la licencia de Pexels sea lo más sencilla posible. Sigue leyendo si quieres más información.</h4>
