--- a/contenido/audio.html
+++ b/contenido/audio.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -118,7 +119,9 @@
         </nav>
         <main>
             <h1 class="text-center">FORMATO WEBP CON BASE MUSICAL</h1>
-
+            <audio>
+                 <source id=audio src="../audios/webPmix.mp3"/>
+            </audio>
             <div class="m-2 text-center">
                 <button id="rw" class="p1 btn btn-primary"><i
                             class="fa-solid fa-angles-left"></i></button>
